tests/errors/type_check/control_flow/goto_undefined_label.err.expected
error: at 4:13: [TC-TerminatorUndefinedTarget] In function 'f', block 'entry': goto targets undefined block 'nowhere'
   |
 4 |             goto nowhere
   |             ^^^^^^^^^^^^
